--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
 nav {
     position: fixed;
     left: 0;
-    z-index: 1000;
+    z-index: 100;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -65,7 +65,7 @@ section {
     opacity: 0;
 }
 
-section:target {
+section:target, section.active {
     opacity: 1;
     left: 0;
     width: 100%;
@@ -100,7 +100,7 @@ section:target {
 
 @keyframes blinking-cursor {
     0% {
-        border-color: black;
+        border-color: white;
     }
     100% {
         border-color: transparent;
@@ -118,59 +118,59 @@ section:target {
 /** wheel of skills */
 @keyframes wheel {
     0% {
-        transform: translateY(0px);
+        transform: translateY(-1400%);
     }
     6.67% {
-        transform: translateY(-100%);
+        transform: translateY(-1300%);
     }
     13.33% {
-        transform: translateY(-200%);
+        transform: translateY(-1200%);
     }
     20% {
-        transform: translateY(-300%);
+        transform: translateY(-1100%);
     }
     26.67% {
-        transform: translateY(-400%);
+        transform: translateY(-1000%);
     }
     33.33% {
-        transform: translateY(-500%);
+        transform: translateY(-900%);
     }
     40% {
-        transform: translateY(-600%);
+        transform: translateY(-800%);
     }
     46.67% {
         transform: translateY(-700%);
     }
     53.33% {
-        transform: translateY(-800%);
+        transform: translateY(-600%);
     }
     60% {
-        transform: translateY(-900%);
+        transform: translateY(-500%);
     }
     66.67% {
-        transform: translateY(-1000%);
+        transform: translateY(-400%);
     }
     73.33%  {
-        transform: translateY(-1100%);
+        transform: translateY(-300%);
     }
     80% {
-        transform: translateY(-1200%);
+        transform: translateY(-200%);
     }
     86.67% {
-        transform: translateY(-1300);
+        transform: translateY(-100%);
     }
     93.33% {
-        transform: translateY(-1400%);
+        transform: translateY(0%);
     }
     100% {
-        transform: translateY(-1490%);
+        transform: translateY(80%);
     }
 }
 
 #skillsets ul {
     position: relative;
     width: 100%;
-    height: 80px;
+    height: 90px;
     list-style: none;
     overflow: hidden;
 }
@@ -178,23 +178,65 @@ section:target {
 #skillsets ul li {
     width: 100%;
     white-space: nowrap;
-    animation: wheel 30s linear infinite;
+    animation: wheel 30s ease-in-out infinite;
 }
 
-ul:hover li {
+#skillsets ul:hover li {
     animation-play-state: paused;
+    filter: blur(0px);
 }
 
-/** project cards */
+/** carousel of projects */
 .carousel {
-    position: absolute;
-    left: 0;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card {
+.carousel .slide {
     position: relative;
+    min-width: 100%;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+}
+
+.carousel .slide > img {
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
+}
+
+.carousel .nav {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.carousel .nav .index {
+    cursor: pointer;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin: 10px;
+    border: 1px solid grey;
+}
+
+.carousel .nav .index:hover, .carousel .nav .index.active {
+    background: linear-gradient(180deg, rgba(232,232,232,1) 0%, rgba(132,130,130,1) 100%);
+}
+
+/** project cards */
+.card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     min-width: 600px;
     width: 600px;
     height: auto;
