--- a/src/style.css
+++ b/src/style.css
@@ -75,20 +75,14 @@ section:target, section.active {
 .section-main {
     font-size: 80px;
     font-weight: 300;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
 
 /** typewriter effect */
-.typed-text-container {
-    display: inline-block;
-}
-
-.typed-text {
-    overflow: hidden;
-    width: 0;
-    border-right: 2px solid;
-    animation: typing 3s steps(var(--word-count), end) forwards 2s, blinking-cursor 2s infinite alternate 5s;
-}
-
 @keyframes typing {
     0% {
         width: 0%;
@@ -105,6 +99,116 @@ section:target, section.active {
     100% {
         border-color: transparent;
     }
+}
+
+.typed-text-container {
+    display: inline-block;
+}
+
+.typed-text {
+    overflow: hidden;
+    white-space: nowrap;
+    width: 0;
+    border-right: 2px solid;
+    animation: typing 3s steps(var(--word-count), end) forwards, blinking-cursor 1s infinite alternate 5s;
+}
+
+/** subtly fluctuating overlapping polygon container */
+@keyframes fluctuate-big {
+    0% {
+        clip-path: polygon(5% 5%, 95% 10%, 95% 95%, 10% 95%); 
+    }
+    25% {
+        clip-path: polygon(7% 5%, 95% 5%, 95% 100%, 10% 95%); 
+    }
+    50% { 
+        clip-path: polygon(5% 5%, 93% 5%, 95% 97%, 7% 95%); 
+    }
+    75% {
+        clip-path: polygon(5% 7%, 95% 10%, 93% 95%, 10% 95%);  
+    }
+    100% {
+        clip-path: polygon(3% 7%, 95% 7%, 95% 93%, 7% 95%); 
+    }
+}
+
+@keyframes fluctuate-med {
+    0% {
+        clip-path: polygon(0% 5%, 90% 5%, 100% 95%, 5% 90%); 
+    }
+    25% {
+        clip-path: polygon(3% 5%, 93% 5%, 97% 95%, 7% 93%); 
+    }
+    50% { 
+        clip-path: polygon(3% 3%, 93% 5%, 95% 97%, 7% 90%); 
+    }
+    75% {
+        clip-path: polygon(3% 0, 93% 5%, 95% 95%, 5% 90%); 
+    }
+    100% {
+        clip-path: polygon(0% 3%, 90% 3%, 97% 93%, 5% 90%); 
+    }
+}
+/** topleft, topright, bottom right, bottom left */
+@keyframes fluctuate-small {
+    0% {
+        clip-path: polygon(5% 5%, 95% 10%, 90% 90%, 10% 95%); 
+    }
+    25% {
+        clip-path: polygon(5% 3%, 93% 12%, 93% 90%, 7% 95%);
+    }
+    50% { 
+        clip-path: polygon(3% 5%, 95% 10%, 93% 87%, 10% 93%);
+    }
+    75% {
+        clip-path: polygon(3% 7%, 95% 10%, 90% 90%, 13% 95%); 
+    }
+    100% {
+        clip-path: polygon(5% 10%, 95% 10%, 90% 93%, 10% 97%);
+    }
+}
+
+.fluctuating-fragments {
+    --content-width: 800px;
+    --content-height: calc(90vh);
+    position: relative;
+    text-align: center;
+}
+
+.fluctuating-fragments [class^="frag"], .fluctuating-fragments .text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.fluctuating-fragments .text {
+    width: calc(var(--content-width) - 200px);
+}
+
+.fluctuating-fragments [class^="frag"] {
+    padding: 10%;
+}
+
+.fluctuating-fragments .frag-big {
+    width: calc(var(--content-width));
+    height: calc(var(--content-height));
+    background: linear-gradient(180deg, rgba(122,108,131,0.5) 0%, rgba(172,163,218,0.5) 100%);
+    animation: fluctuate-big 20s linear infinite;
+}
+
+.fluctuating-fragments .frag-med {
+    width: calc(var(--content-width));
+    height: calc(var(--content-height));
+    background: linear-gradient(90deg, rgba(87,101,116,0.6) 0%, rgba(173,162,171,0.6) 100%);;
+    animation: fluctuate-med 20s linear infinite alternate;
+}
+
+.fluctuating-fragments .frag-small {
+    width: var(--content-width);
+    height: var(--content-height);
+    background: linear-gradient(180deg, rgba(131,157,174,0.7) 0%, rgba(152,131,131,0.7) 100%);
+    animation: fluctuate-small 20s linear infinite alternate;
 }
 
 /** binary matrix */
@@ -375,6 +479,10 @@ section:target, section.active {
 }
 
 #contact ul li p { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: block;
     width: 100%;
     font-size: 25px;
@@ -387,19 +495,7 @@ section:target, section.active {
     transition: 2s;
 }
 
-/** general miscellaneous effects */
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.nowrap {
-    white-space: nowrap;
-}
-
+/** general text styling */
 .courier-new {
     font-family:'Courier New', monospace;
 }
@@ -415,4 +511,9 @@ section:target, section.active {
 .luminescent-white {
     color: whitesmoke;
     text-shadow: 1px 1px 2px black, 1px 1px 5px white;
+}
+
+.font-larger-500 {
+    font-size: larger;
+    font-weight: 500;
 }
