--- a/style.css
+++ b/style.css
@@ -220,6 +220,15 @@ section:target, section.active {
 }
 
 /** wheel of skills */
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 #skillsets ul {
     width: 50vw;
     position: absolute;
@@ -234,14 +243,34 @@ section:target, section.active {
     display: inline-block;
     font-size: 40px;
     font-weight: 600;
-    margin: 10px;
-    background: transparent;
+    margin: 5px;
+    padding: 1px 1px 2px 2px;
+    border-radius: 10px;
+    overflow: hidden;
     filter: blur(0.5px);
-    text-decoration: underline overline white;
+}
+
+#skillsets ul li::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30%;
+    z-index: -1;
+    background: conic-gradient(transparent, transparent, rgb(85,75,104), rgb(245, 245, 245));
+    animation: rotate 6s linear infinite;
 }
 
 #skillsets ul li:hover {
     filter: blur(0px);
+}
+
+#skillsets ul li span {
+    background: rgb(100, 99, 115);
+    border-radius: 10px;
+    z-index: 1;
 }
 
 /** carousel of projects */
