--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     min-width: 100vw;
     min-height: 100vh;
-    background: linear-gradient(180deg, rgba(123,122,122,1) 0%, rgba(47,47,47,1) 100%);
+    background: linear-gradient(180deg, rgba(1,0,6,1) 0%, rgba(96,98,142,1) 100%);
 }
 
 /** nav bar */
@@ -63,7 +63,7 @@ section {
     align-items: center;
     transition: ease-in-out 0.5s;
     opacity: 0;
-    background: linear-gradient(180deg, rgba(123,122,122,1) 0%, rgba(47,47,47,1) 100%);
+    background: linear-gradient(180deg, rgba(1,0,6,1) 0%, rgba(96,98,142,1) 100%);;
 }
 
 section:target, section.active {
