--- a/style.css
+++ b/style.css
@@ -235,9 +235,9 @@ section {
 }
 
 #skills #carousel-container #carousel .side span {
-    font-size: 3.5vh;
+    font-size: 100%;
     font-family: 'Bungee Hairline', cursive;
-    line-height: 3.5vh;
+    line-height: 100%;
     font-weight: 100;
     border-radius: 10px;
 }
