--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    perspective: 150vw;
     perspective-origin: top;
 }
 
