--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background: #1e1e30;
     color: white;
     font-family: "Exo", sans-serif;
+    overflow-x: hidden;
 }
 
 /** sections */
@@ -85,6 +86,7 @@ section {
     position: absolute;
     top: 0;
     left: 0;
+    max-width: 100%;
     z-index: -1;
 }
 
@@ -449,5 +451,11 @@ section {
 
     #contacts ul {
         flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    #skills #carousel-container {
+        perspective: 80vw;
     }
 }
